--- a/ToDoList-iOS17/Base.lproj/Main.storyboard
+++ b/ToDoList-iOS17/Base.lproj/Main.storyboard
@@ -30,7 +30,14 @@
                             <outlet property="delegate" destination="EmF-oJ-qT9" id="qiY-G3-xiS"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="yf2-n5-GaR"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="yf2-n5-GaR">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="8aB-Mn-b9j">
+                            <color key="tintColor" systemColor="systemRedColor"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="EmF-oJ-qT9" id="lzg-6a-k2o"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FBK-TL-C3Y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -78,7 +85,10 @@
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemBlueColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
